--- a/package.json
+++ b/package.json
@@ -9,11 +9,10 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "start:tailwind": "npx tailwindcss -i ./src/index.css -o ./dist/output.css --watch",
-    "start:all": "concurrently \"npm run dev\" \"npm run start:tailwind\""
+    "start:all": "concurrently --names \"VITE,TAILWIND\" -c \"blue,green\" \"npm run dev\" \"npm run start:tailwind\""
   },
   "dependencies": {
     "axios": "^1.12.2",
-    "concurrently": "^9.2.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.3"
@@ -25,6 +24,7 @@
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.4",
     "autoprefixer": "^10.4.21",
+    "concurrently": "^9.2.1",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
