--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "start:all": "concurrently --names \"VITE,TAILWIND\" -c \"blue,green\" \"npm run dev\" \"npm run start:tailwind\""
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "axios": "^1.12.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.3"
   },
   "devDependencies": {
